[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.8"



[project]
name = "tsmtool"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["tsmtool"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"] 

dependencies = [
  "bs4==0.0.1",
  "click==8.0.4",
  "requests==2.27.1"
]

[project.optional-dependencies]
dev = [
  "black==22.1.0",
  "bump2version==1.0.1",
  "coverage==6.3.2",
  "flake8==4.0.1",
  "flit==3.7.1",
  "pytest==7.1.1",
  "pytest-datadir==1.3.1",
  "tox==3.24.5"
]
docs = [
  "m2r2==0.3.2",
  "Sphinx==4.5.0",
  "sphinx-click==3.1.0",
  "sphinx-rtd-theme==1.0.0"
]

[project.urls]
Home = "https://github.com/rstms/tsmtool"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
tsmtool = "tsmtool.cli:cli"
