[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.8"



[project]
name = "tsmtool"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["tsmtool"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"] 

dependencies = [
  "bs4",
  "click",
  "requests",
  "tabulate"
]

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "coverage",
  "flake8",
  "flit",
  "pytest",
  "pytest-datadir",
  "tox",
  "pdbpp"
]
docs = [
  "m2r2",
  "Sphinx",
  "sphinx-click",
  "sphinx-rtd-theme"
]

[tool.flit.module]
name = "tsmtool"

[project.urls]
Home = "https://github.com/rstms/tsmtool"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
tsmtool = "tsmtool.cli:cli"
